2009-12-11  Dirk Eddelbuettel  <edd@debian.org>

	* R/RcppInline.R: Imported function 'cfunction' from the inline
  	  package, along with small patch to directly support Rcpp. The
	  inclusion may be temporary -- if our patch is integrated into
	  inline we may just depend on that package
        * man/RcppInline.Rd: Imported from inline, plus change for Rcpp
        * inst/examples/RcppInline/RcppInlineExample.r: Small example
	  taken from the 'Intro to HPC with R' tutorials
	
	* R/RcppVersion.R: Removed as unused as redundant given read.dcf() in R
	* man/RcppVersion.R: idem
	* NAMESPACE: updated accordingly
	* INDEX: idem

2009-11-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Add Dominick back into Authors per his new request
	  reversing his requests to be removed from last December

2009-11-17  Dirk Eddelbuettel  <edd@debian.org>

	* man/RcppParams.Rd: applied patch by Frank S. Thomas to fix example

2009-11-15  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppDateVector.{cpp,h}: Moved out of Rcpp.{h,cpp}
	* src/RcppDatetimeVector.{cpp,h}: idem
	* src/RcppFunction.{cpp,h}: idem
	* src/RcppMatrix.{cpp,h}: idem
	* src/RcppMatrixView.{cpp,h}: idem
	* src/RcppNumList.{cpp,h}: idem
	* src/RcppResultSet.{cpp,h}: idem
	* src/RcppStringVector.{cpp,h}: idem
	* src/RcppStringVectorView.{cpp,h}: idem
	* src/RcppVector.{cpp,h}: idem
	* src/RcppVectorView.{cpp,h}: idem
	* src/RcppCommon.cpp: takes remaining utility function from Rcpp.cpp

2009-11-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.6.8

	* src/RcppParams.{cpp,h}: Code reorginsation, moved out of Rcpp.{h,cpp}
	* src/RcppDate.{cpp,h}: idem
	* src/RcppDatetime.{cpp,h}: idem
	* src/RcppCommon.h: New header file for common defines and includes
	* src/Makevars{,.win}: Updated and generalised to reflect new files

2009-11-08  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.6.7

	* man/RcppVector.Rd: Remove erraneous use of \R in \title{} section