@@ -1,3 +1,10 @@
+2009-12-13  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/RcppInline.R: Extended to for additional header and library
+	  arguments so that we can work with arbitrary other projects
+        * inst/examples/RcppInline/RcppInlineWithLibsExamples.r: New
+	  examples using GNU GSL to show how to compile + link via inline
+
 2009-12-11  Dirk Eddelbuettel  <edd@debian.org>
 
 	* R/RcppInline.R: Imported function 'cfunction' from the inline
@@ -7,7 +14,7 @@
         * man/RcppInline.Rd: Imported from inline, plus change for Rcpp
         * inst/examples/RcppInline/RcppInlineExample.r: Small example
 	  taken from the 'Intro to HPC with R' tutorials
-	
+
 	* R/RcppVersion.R: Removed as unused as redundant given read.dcf() in R
 	* man/RcppVersion.R: idem
 	* NAMESPACE: updated accordingly
